--- a/src/app/globals.css
+++ b/src/app/globals.css
@@ -5,40 +5,52 @@ body {
   overflow-x: hidden;
 }
 @media screen and (min-width: 576px) {
-/* You can us custom class hare */
-::-webkit-scrollbar {
-  width: 18px;
-  height: 0px;
-}
+  /* You can us custom class hare */
+  body::-webkit-scrollbar {
+    width: 18px;
+    height: 0px;
+  }
 
-/* You can us custom class hare */
-::-webkit-scrollbar-track {
-  border-radius: 0px;
-  background: white;
-}
+  /* You can us custom class hare */
+  body::-webkit-scrollbar-track {
+    border-radius: 0px;
+    background: white;
+  }
 
-/* You can us custom class hare */
-::-webkit-scrollbar-thumb {
-  background-color: gray;
-  border-radius: 7px;
-  border: 4px solid white;
-}
+  /* You can us custom class hare */
+  body::-webkit-scrollbar-thumb {
+    background-color: gray;
+    border-radius: 7px;
+    border: 4px solid white;
+  }
 
-/* You can us custom class hare */
-::-webkit-scrollbar-thumb:hover {
-}
+  /* You can us custom class hare */
+  body::-webkit-scrollbar-thumb:hover {
+  }
 
-/* You can us custom class hare */
-::-webkit-scrollbar-corner {
-}
+  /* You can us custom class hare */
+  body::-webkit-scrollbar-corner {
+  }
 
-/* SUPPORT FOR FIREFOX
+  /* SUPPORT FOR FIREFOX
 @supports (scrollbar-color: red blue) {
   * {
     scrollbar-color: rgb(177, 177, 177) white;
     scrollbar-width: thin;
   }
 } */
-
 }
 
+.scroll-rock::-webkit-scrollbar-track {
+  border-radius: 0px;
+  background-color: rgb(231 229 228 );
+}
+.scroll-rock::-webkit-scrollbar-thumb {
+  background-color: gray;
+  border-radius: 7px;
+  border: 4px solid  rgb(231 229 228 );
+}
+.scroll-rock::-webkit-scrollbar {
+  width: 18px;
+  height: 0px;
+}
