--- a/src/app/globals.css
+++ b/src/app/globals.css
@@ -54,3 +54,16 @@ body {
   width: 18px;
   height: 0px;
 }
+.scroll-rock-sm::-webkit-scrollbar-track {
+  border-radius: 0px;
+  background-color: white;
+}
+.scroll-rock-sm::-webkit-scrollbar-thumb {
+  background-color: rgb(226, 217, 217);
+  border-radius: 6px;
+  border: 4px solid  white;
+}
+.scroll-rock-sm::-webkit-scrollbar {
+  width: 15px;
+  height: 0px;
+}
